--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.0",
